# modul_20_prod_Skillbox

./: Nastrojka Docker.txt  Nastrojka Server Mashine.txt  Timeweb (3)  timeweb  timeweb.pub
Homework/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Homework/my_first_django/: auth-users-fixture.json  db.sqlite3  log.txt  manage.py  order-fixture.json
Homework/my_first_django/blogapp/: admin.py  models.py  urls.py  views.py
Homework/my_first_django/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_article_category.py  0006_article_author.py  0007_article_tags.py
Homework/my_first_django/blogapp/templates/blogapp/: article_list.html  base.html
Homework/my_first_django/my_first_django/: asgi.py  settings.py  urls.py  wsgi.py
Homework/my_first_django/myapiapp/: urls.py  views.py
Homework/my_first_django/myauth/: admin.py  forms.py  models.py  urls.py  views.py
Homework/my_first_django/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
Homework/my_first_django/requestdataapp/: forms.py  urls.py  views.py
Homework/my_first_django/shopapp/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Homework/my_first_django/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_product_description_alter_product_name.py
(+27 files in other folders)
