[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "seriy-pa",email = "spalagin@yandex.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.7)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
